# algorithm_library

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  README.md
apps/benchmark/: CMakeLists.txt  README.md
apps/benchmark/src/: benchmark_algorithms.cpp
apps/build_all/: CMakeLists.txt
apps/integration_test/: CMakeLists.txt
apps/integration_test/include/: integration_test.h
apps/integration_test/src/: dc_remover_integration_test.cpp
apps/juce/hello_foleys_gui_magic/: CMakeLists.txt
apps/juce/hello_foleys_gui_magic/src/: magic.sav.xml
apps/juce/hello_world/: CMakeLists.txt
apps/juce/hello_world/src/: AudioAppDemo.h  (+4 more)
apps/juce/visualizer/: CMakeLists.txt
apps/juce/visualizer_components/: CMakeLists.txt
apps/plot_examples/: CMakeLists.txt
apps/plot_examples/src/: main.cpp
apps/spectrogramzer/: CMakeLists.txt
apps/spectrogramzer/src/: main.cpp
apps/test/: CMakeLists.txt
apps/test/src/: test_activity_detection_noise_estimation.cpp  test_beamformer_mvdr.cpp  test_beamformer_path.cpp  test_circular_buffer.cpp  test_critical_bands_bark.cpp  test_dc_remover_first_order.cpp  test_design_iir_min_phase.cpp  test_design_iir_non_parametric.cpp  test_fft_real.cpp  test_filter_min_max_lemire.cpp  test_filterbank_wola.cpp  test_iir_filter.cpp  test_iir_filter_time_varying.cpp  test_noise_estimation_activity_detection.cpp  test_preprocessing_path.cpp  test_read_write_type.cpp  test_spectrogram_filterbank.cpp  test_spectrogram_nonlinear.cpp  test_spline_cubic.cpp
apps/unit_test/: CMakeLists.txt  README.md
apps/unit_test/include/: unit_test.h
apps/unit_test/src/: activity_detection_noise_estimation_unit_test.cpp  bandsplit_combine_chebyshev_test.cpp  beamformer_gain_reduction.cpp  beamformer_mvdr_unit_test.cpp  beamformer_path_unit_test.cpp  circular_buffer_unit_test.cpp  critical_bands_bark_unit_test.cpp  dc_remover_first_order_unit_test.cpp  design_iir_min_phase_unit_test.cpp  design_iir_non_parametric_unit_test.cpp  fft_real_unit_test.cpp  filter_min_max_lemire_unit_test.cpp  filter_power_spectrum_unit_test.cpp  filterbank_set_unit_test.cpp  filterbank_single_channel_unit_test.cpp  filterbank_wola_unit_test.cpp  gain_apply_simple_test.cpp  gain_calculation_apriori_unit_test.cpp  iir_filter_non_parametric_unit_test.cpp  iir_filter_time_varying_unit_test.cpp  iir_filter_unit_test.cpp  interpolation_cubic_unit_test.cpp  mel_scale_spectrogram_unit_test.cpp  min_phase_spectrum_unit_test.cpp  noise_estimation_activity_detection_unit_test.cpp  noise_reduction_unit_test.cpp  normal3d_diff_unit_test.cpp  onnx_runtime_unit_test.cpp  preprocessing_path_unit_test.cpp  read_write_type_unit_test.cpp  single_channel_path_unit_test.cpp  solver_toeplitz_system_unit_test.cpp  spectral_compressor_test.cpp  spectrogram_filterbank_unit_test.cpp  spectrogram_nonlinear_unit_test.cpp  spectrogram_set_unit_test.cpp  spline_cubic_unit_test.cpp  test_activity_detection_noise_estimation.cpp  test_beamformer_mvdr.cpp  test_beamformer_path.cpp  (+25 more)
libs/pyplot_cpp/: CMakeLists.txt
libs/pyplot_cpp/src/: pyplot_cpp.cpp
libs/unreal_engine_library/: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/activity_detection/: activity_detection.cpp  activity_detection_noise_estimation.h
src/activity_detection_frequency_domain/: activity_detection_frequency_domain.cpp  activity_detection_noise_estimation.h
src/bandsplit_downsample/: bandsplit_downsample.cpp  bandsplit_downsample_chebyshev.h
src/beamformer/: beamformer.cpp  beamformer_mvdr.h
src/circular_buffer/: circular_buffer_general.h
src/critical_bands/: critical_bands.cpp  critical_bands_bark.h
src/dc_remover/: dc_remover.cpp  dc_remover_first_order.h
src/delay/: circular_buffer.h  delay.cpp
src/design_iir_min_phase/: design_iir_min_phase.cpp  design_iir_min_phase_tf2sos.h
src/design_iir_non_parametric/: design_iir_non_parametric.cpp  design_iir_spline.h
src/fft/: fft.cpp  fft_real.h
src/filter_min_max/: filter_min_max.cpp  filter_min_max_lemire.h
src/filter_power_spectrum/: calculate_filter_power_spectrum.h  filter_power_spectrum.cpp
src/filterbank/: filterbank.cpp  filterbank_simple.h  filterbank_single_channel.h  filterbank_wola.h
src/filterbank_set/: filterbank_set.cpp  filterbank_set_wola.h
src/framework/: base_algorithm.h  framework.h  macros.h  read_write_type.h  unit_test.h  vector_algo.h
src/gain_apply/: gain_apply.cpp  gain_apply_simple.h
src/gain_calculation/: gain_calculation.cpp  gain_calculation_apriori.h
src/iir_filter/: iir_filter.cpp  iir_filter_2nd_order.h
src/iir_filter_non_parametric/: iir_filter_design_non_parametric.h  iir_filter_non_parametric.cpp
src/iir_filter_time_varying/: iir_filter_time_varying.cpp  state_variable_filter.h
src/interpolation/: interpolation.cpp  interpolation_cubic.h
src/mel_scale/: mel_scale.cpp  mel_scale_spectrogram.h
src/min_phase_spectrum/: min_phase_spectrum.cpp  min_phase_spectrum_cepstrum.h
src/multi_channel_noise_reduction/: beamformer_gain_reduction.h  multi_channel_noise_reduction.cpp
src/noise_estimation/: noise_estimation.cpp  noise_estimation_activity_detection.h
src/noise_reduction/: noise_reduction.cpp  noise_reduction_apriori.h  noise_reduction_ml.h
src/normal3d/: normal3d.cpp  normal3d_diff.h
src/preprocessing_path/: beamformer_path.h  preprocessing_path.cpp
src/single_channel_path/: noise_reduction_path.h  single_channel_path.cpp
src/solver_toeplitz/: solver_toeplitz.cpp  solver_toeplitz_system.h
src/spectral_compressor/: spectral_compressor.cpp  spectral_compressor_adaptive.h  spectral_compressor_wola.h  spectral_selector.h
src/spectrogram/: spectrogram.cpp  spectrogram_adaptive.h  spectrogram_filterbank.h  spectrogram_nonlinear.h  spectrogram_set.h  upscale2d_linear.h
src/spline/: spline.cpp  spline_cubic.h
src/utilities/: fastonebigheader.h  functions.h  pffft.c  pffft.h
test/: CMakeLists.txt
test/benchmark/: benchmark_algorithms.cpp
test/googleTest/algorithms/: test_fft_real.cpp  test_filterbank_wola.cpp  test_min_phase_spectrum.cpp  test_normal3d_diff.cpp  test_spectrogram_adaptive.cpp
(+79 files in other folders)
